Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8030816/CrashLambdaExpressionWithNonAccessibleIdTest.out
CrashLambdaExpressionWithNonAccessibleIdTest.java:14:17: compiler.err.cant.resolve.location: kindname.class, A, , , (compiler.misc.location: kindname.class, CrashLambdaExpressionWithNonAccessibleIdTest, null)
1 error
